--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "myexpressapp",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "main": "blog.js",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -8,7 +9,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "4.16.4",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
